Update ChoiceTask creation backend